k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailfind
  labels:
    name: mailfind
    environment: production
